À propos et ajout de photos

--- a/static/ap.html
+++ b/static/ap.html
@@ -45,25 +45,35 @@
 									<!-- Content -->
 									
 		<p>Simon Roberge est un réalisateur, producteur et scénariste qui œuvre dans la grande région de Montréal. Il a achevé, en 2019, un baccalauréat en production cinématographique à l’école de cinéma Mel Hoppenheim de l’université Concordia. Jusqu’à ce jour, ses travaux se sont particulièrement concentrés sur la forme du portrait cinématographique en documentaire. Son premier court-métrage Dialogue entre elle et moi (2018) a notamment été présenté au Festival du nouveau cinéma, au festival Une nuit trop courte de Grenoble ainsi qu’au festival Regard sur le court-métrage au Saguenay. En 2020 sa collaboration avec l’artiste musicale Antoine Fugère donne naissance au clip Foolin’. Aujourd’hui, Simon a plusieurs projets en documentaire et dans le domaine du Vidéoclip.</p>
-		
-		<p><b>Bourses</b></p>
-		<ul>
-		<li>Bourse de l'Académie pour la relève, Académie canadienne du cinéma et de la télévision, 2020, https://academie.ca/99/communiques-de-presse</li>
-		<li>Bourse Claude F. Lefebvre, Fondation de soutient aux arts de Laval, 2019, https://www.fondationsoutienartslaval.com/bourse-claude-f.-lefebvre.html</li>
-		<li>Bourse de cinéma, Fondation de soutient aux arts de Laval, 2018</li>
-		</ul>
-		<p><b>Prix</b></p>
-		
-		Prix du meilleur documentaire au festival de Film de Concordia, Dialogue entre elle et moi, 2018
-		
-		Prix du meilleur documentaire canadien UWPG Film festival, Dialogue entre elle et moi, 2020
-		
-		<p><b>Mention honorables</b></p>
-		
-		Membre de la cohorte 2019 du Campus, Talent lab du Festival de cinéma de la ville de Québec
-		
-		Représentant du cégep Montmorency au prix collégial de cinéma québécois, 2015 
-		
+
+
+	<section id="content">
+		<div>
+			<section>
+				<p style="float: left; margin-right: 100px;"><img src="Simon.jpg" alt="Simon Roberge"></p>
+			</section>
+			<section>
+				<b>Bourses</b>
+				<ul>
+					<li>Bourse de l'Académie pour la relève, Académie canadienne du cinéma et de la télévision, 2020, https://academie.ca/99/communiques-de-presse</li>
+					<li>Bourse Claude F. Lefebvre, Fondation de soutient aux arts de Laval, 2019, https://www.fondationsoutienartslaval.com/bourse-claude-f.-lefebvre.html</li>
+					<li>Bourse de cinéma, Fondation de soutient aux arts de Laval, 2018</li>
+				</ul>
+				<b>Prix</b>
+				<ul>
+					<li>Prix du meilleur documentaire au festival de Film de Concordia, Dialogue entre elle et moi, 2018</li>
+					<li>Prix du meilleur documentaire canadien UWPG Film festival, Dialogue entre elle et moi, 2020</li>
+				</ul>
+				<b>Mention honorables</b>
+				<ul>
+					<li>Membre de la cohorte 2019 du Campus, Talent lab du Festival de cinéma de la ville de Québec</li>
+					<li>Représentant du cégep Montmorency au prix collégial de cinéma québécois, 2015</li>
+				</ul>
+			</section>
+		</div>
+	</section>
+	</div>
+	
 		<!-- Scripts -->
 			<script src="js/jquery.min.js"></script>
 			<script src="js/jquery.scrolly.min.js"></script>
