Formulaire de contact
Enlevé de la page d'accueil et ajouté dans À propos

--- a/static/ap.html
+++ b/static/ap.html
@@ -73,6 +73,27 @@
 		</div>
 	</section>
 	</div>
+<!-- modify this form HTML and place wherever you want your form -->
+<div class="inner">
+<h2>Pour communiquer avec moi</h2>
+<form
+  action="https://formspree.io/f/mwkwzkgl"
+  method="POST"
+>
+  <label>
+    Votre courriel:
+    <input type="text" name="_replyto">
+  </label>
+  <label>
+    Votre message:
+    <textarea name="message"></textarea>
+  </label>
+
+  <!-- your other form fields go here -->
+
+  <button type="submit">Transmettre</button>
+</form>
+</div>
 	
 		<!-- Scripts -->
 			<script src="js/jquery.min.js"></script>
