Test config image

--- a/public/blogs/pt/index.html
+++ b/public/blogs/pt/index.html
@@ -107,7 +107,7 @@
                     
                     <section>
                         <a href="https://simonroberge.com/blogs/pt/mca/" class="image">
-							<img src="/img/blogs/Arul.jpg" alt="" data-position="center center" />
+							<img src="/img/blogs/" alt="" data-position="center center" />
 						</a>
                         <div class="content">
                             <div class="inner">
