Changement de thème
Quarante

--- a/public/blogs/index.html
+++ b/public/blogs/index.html
@@ -94,7 +94,7 @@
                                 </header>
                                 <p></p>
                                 <ul class="actions">
-                                    <li><a href="https://simonroberge.com/blogs/pav/" class="button">Learn more</a></li>
+                                    <li><a href="https://simonroberge.com/blogs/pav/" class="button">Plus de détails</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -111,7 +111,7 @@
                                 </header>
                                 <p></p>
                                 <ul class="actions">
-                                    <li><a href="https://simonroberge.com/blogs/pt/" class="button">Learn more</a></li>
+                                    <li><a href="https://simonroberge.com/blogs/pt/" class="button">Plus de détails</a></li>
                                 </ul>
                             </div>
                         </div>
