--- a/public/blogs/pt/index.html
+++ b/public/blogs/pt/index.html
@@ -90,7 +90,7 @@
                     
                     <section>
                         <a href="https://simonroberge.com/blogs/pt/foolin/" class="image">
-							<img src="/img/blogs/Foolin.jpg" alt="" data-position="center center" />
+							<img src="/img/blogs/" alt="" data-position="center center" />
 						</a>
                         <div class="content">
                             <div class="inner">
@@ -99,7 +99,7 @@
                                 </header>
                                 <p>Vidéoclip de l’artiste Antoine Fugère, 2020</p>
                                 <ul class="actions">
-                                    <li><a href="https://simonroberge.com/blogs/pt/foolin/" class="button">Learn more</a></li>
+                                    <li><a href="https://simonroberge.com/blogs/pt/foolin/" class="button">Plus de détails</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -116,7 +116,7 @@
                                 </header>
                                 <p>Documentaire, 2019</p>
                                 <ul class="actions">
-                                    <li><a href="https://simonroberge.com/blogs/pt/mca/" class="button">Learn more</a></li>
+                                    <li><a href="https://simonroberge.com/blogs/pt/mca/" class="button">Plus de détails</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -124,7 +124,7 @@
                     
                     <section>
                         <a href="https://simonroberge.com/blogs/pt/deem/" class="image">
-							<img src="/img/blogs/Dialogue.jpg" alt="" data-position="center center" />
+							<img src="/img/blogs/" alt="" data-position="center center" />
 						</a>
                         <div class="content">
                             <div class="inner">
@@ -133,7 +133,7 @@
                                 </header>
                                 <p>Documentaire, 2018</p>
                                 <ul class="actions">
-                                    <li><a href="https://simonroberge.com/blogs/pt/deem/" class="button">Learn more</a></li>
+                                    <li><a href="https://simonroberge.com/blogs/pt/deem/" class="button">Plus de détails</a></li>
                                 </ul>
                             </div>
                         </div>
