--- a/public/blogs/pav/index.html
+++ b/public/blogs/pav/index.html
@@ -99,7 +99,7 @@
                                 </header>
                                 <p>Documentaire, postproduction en cours</p>
                                 <ul class="actions">
-                                    <li><a href="https://simonroberge.com/blogs/pav/sw/" class="button">Plus de détails</a></li>
+                                    <li><a href="https://simonroberge.com/blogs/pav/sw/" class="button">Learn more</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -116,7 +116,7 @@
                                 </header>
                                 <p>Fiction, préproduction en cours</p>
                                 <ul class="actions">
-                                    <li><a href="https://simonroberge.com/blogs/pav/idg/" class="button">Plus de détails</a></li>
+                                    <li><a href="https://simonroberge.com/blogs/pav/idg/" class="button">Learn more</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -133,7 +133,7 @@
                                 </header>
                                 <p>Documentaire, montage en cours</p>
                                 <ul class="actions">
-                                    <li><a href="https://simonroberge.com/blogs/pav/cdh/" class="button">Plus de détails</a></li>
+                                    <li><a href="https://simonroberge.com/blogs/pav/cdh/" class="button">Learn more</a></li>
                                 </ul>
                             </div>
                         </div>
